tests/models/struct/unnamed/vec/pass/max_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_items = 2)]
    Vec<()>
);
fn main() {}
