tests/models/struct/unnamed/vec/fail/max_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_items = 2.0)]
    Vec<()>
);
fn main() {}
